--- a/wiki/Downloads.wiki
+++ b/wiki/Downloads.wiki
@@ -1,4 +1,5 @@
 #summary Downloading and installing RubyCAS-Server
+#labels Phase-Deploy
 
 == The Easy Way ==
 
@@ -50,8 +51,9 @@ The !RubyGem method describe above is preferred, but if you insist...
     * {{{git clone git://github.com/gunark/picnic.git}}}
   # Clone the RubyCAS-Server development source code from the [http://github.com/gunark/rubycas-server/tree/master Github Repo]
     * {{{git clone git://github.com/gunark/rubycas-server.git}}}
-  # Untar the source archive and `cd` into the uncompressed directory.
-  # Run {{{ruby setup.rb}}}.
+  # `cd` into the `rubycas-server` directory.
+    * You can run RubyCAS-Server directly from here by issuing the command: {{{bin/rubycas-server}}}
+    * or you can install it into your system using: {{{ruby setup.rb}}}.
 
 RubyCAS-Server should now be installed. See the QuickStart and HowToConfigure wiki pages further instructions.
 
