--- a/wiki/Downloads.wiki
+++ b/wiki/Downloads.wiki
@@ -17,13 +17,17 @@ You can obtain the RubyCAS-Server !RubyGem source code directly from the *[http:
 
 === Installing via !RubyGems ===
 
-  # Make sure that you have a [http://www.ruby-lang.org/en/downloads/ Ruby] interpreter installed. Version 1.8.6 or later is recommended. If you're on Windows, the quick and easy way to install Ruby is the [http://rubyforge.org/frs/download.php/27227/ruby186-26_rc2.exe One-Click Installer].
+  # Make sure that you have a [http://www.ruby-lang.org/en/downloads/ Ruby] interpreter installed. Version 1.8.7 or later is recommended. If you're on Windows, the quick and easy way to install Ruby is the [http://rubyinstaller.org/ RubyInstaller].
   # You will also need the !RubyGems package management system. Generally this is automatically installed for you along with the Ruby interpreter. To see if you have !RubyGems installed, open up a command prompt and type `gem`. If that doesn't work, you will need to [http://rubygems.org/read/chapter/3 install it manually].
   # Once !RubyGems is installed, you should be able to install RubyCAS-Server by running the command: {{{gem install rubycas-server}}}
   # Answer 'Yes' when asked about installing dependencies.
 
 
-RubyCAS-Server should now be installed. Try running `rubycas-server` from your command line. By default RubyCAS-Server is pre-configured for operation on Linux. The program has to be able to write some configuration files to `/etc` and its log to `/var/log/casserver.log`, so you will have to run the `rubycas-server` command as root (i.e. `sudo rubycas-server`). If you prefer to store your configuration files elsewhere, try running `rubycas-server` with the `-h` flag for a list of command-line options. If you are running on Windows, you will have to translate some of this Linux jargon into appropriate equivalents for your system.
+RubyCAS-Server should now be installed. Try running `rubycas-server` from your command line. 
+
+If you're on a POSIX platform (Linux, Mac OS X), the program has to be able to write some configuration files to `/etc` and its log to `/var/log/casserver.log`, so you will have to run the `rubycas-server` command as root (i.e. `sudo rubycas-server`). If you prefer to store your configuration files elsewhere, try running `rubycas-server` with the `-h` flag for a list of command-line options.
+
+If you are running on Windows, you will have to translate some of the Linux jargon in this documentation into appropriate equivalents for your system.
 
 The first time you run RubyCAS-Server, the server will try to create a default configuration file for you in `/etc/rubycas-server/config.yml` and will then exit. Have a look inside this file and edit it to your needs. RubyCAS-Server requires a SQL database; configuration examples are provided for various database servers (MySQL, PostgreSQL, SQLite, etc.). Before running the `rubycas-server` command again, make sure that the database you've configured is ready to be used. For example, if you're using mysql, you'll have to create the database first:
 
@@ -39,19 +43,14 @@ You can also use `rubycas-server-ctl start` to start the server in the backgroun
 
 The !RubyGem method describe above is preferred, but if you insist...
 
-  # Make sure you have a [http://www.ruby-lang.org/en/downloads/ Ruby] interpreter installed. Version 1.8.6 or later is recommended.
-  # Download the dependencies. You will need (at least):
-    * [http://rubyforge.org/projects/activesupport ActiveSupport]
-    * [http://rubyforge.org/projects/activerecord ActiveRecord]
-  # Install the dependencies as per their individual install instructions. If for some insane reason you're trying to avoid !RubyGems, the general procedure is to install the libraries somewhere in Ruby's include path (for example `/usr/lib/ruby/site_ruby/1.8` on some Linux systems).
+  # Make sure you have a [http://www.ruby-lang.org/en/downloads/ Ruby] interpreter installed. Version 1.8.7 or later is recommended.
+  # Install RubyGems and then bundler (`gem install bundler`). If for some insane reason you're trying to avoid !RubyGems altogether, the general procedure is to install the libraries somewhere in Ruby's include path (for example `/usr/lib/ruby/site_ruby/1.8` on some Linux systems).
   # Make sure you have [http://git-scm.com/ git] source control management tools installed.
-  # Clone the Picnic development source code from the [http://github.com/zuk/picnic Github repo] (Picnic is a middleware layer that underlies some of RubyCAS-Server's functionality)
-    * {{{git clone git://github.com/gunark/picnic.git}}}
   # Clone the RubyCAS-Server development source code from the [http://github.com/gunark/rubycas-server/tree/master Github Repo]
     * {{{git clone git://github.com/gunark/rubycas-server.git}}}
   # `cd` into the `rubycas-server` directory.
-    * You can run RubyCAS-Server directly from here by issuing the command: {{{bin/rubycas-server}}}
-    * or you can install it into your system using: {{{ruby setup.rb}}}.
+    * Run `bundle` to install all of the necessary dependencies (they're listed in `Gemfile.lock`).
+    * You can run RubyCAS-Server directly from here by issuing the command: {{{bin/rubycas-server}}}.
 
 See the HowToConfigure wiki page for further instructions.
 
