Edited wiki page Localization through web user interface.

--- a/wiki/Localization.wiki
+++ b/wiki/Localization.wiki
@@ -1,29 +1,2 @@
-#summary Info on how to deploy RubyCAS-Server for languages other than English.
 #labels Phase-Implementation,Phase-Deploy,Phase-Support
-
-=Localization (l10n) in RubyCAS-Server=
-
-Localization in RubyCAS-Server is implemented through Ruby-!GetText.
-
-Check https://github.com/gunark/rubycas-server/tree/master/po for an up-to-date list of all available localizations.
-
-These translations should work out of the box if you install RubyCAS-Server as a gem; otherwise you may have to build he locale .mo files by running the `rake mo` command in the RubyCAS-Server installation directory.
-
-The server should auto-detect the user's preferred language based on
-headers submitted by their browser. You can force a certain language
-to be used by adding a 'lang' parameter to the CAS URL (for example,
-'&lang=de' for german). You can also change the default language from
-english to something else using the 'default_locale' option in your
-config.yml file.
-
-Most of the included localizations are machine translated, so the
-quality of the translation probably isn't very good. 
-
-If you would like to submit corrections or additional translations please see:
-
-http://code.google.com/p/rubycas-server/wiki/HowToContribueTranslations
-
-
-===Thanks===
-
-Thanks to Antono Vasiljev for implementing much of the localization code in RubyCAS-Server!
+Moved to https://github.com/rubycas/rubycas-server/wiki/Localization
